# novel-workbench

./: .env.example  .gitignore  CURRENT_PHASE.md  PROJECT_CHARTER.md  README.md  start.bat  tmp_check_db.py  tmp_query.py
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 45661e74932a_baseline_13_tables.py  (+22 more)
apps/api/app/: config.py  db.py  errors.py  main.py  mcp_auth.py  mcp_server.py  mcp_utils.py
apps/api/tests/: conftest.py  test.db  test_chapter_architect_v1.py  test_chapters_api.py  test_context_service.py  test_critic_evidence_compiler.py  test_critic_v2_contract.py  test_db.py  test_detector_generalization.py  test_errors.py  test_generation_models.py  test_generation_service.py  test_health.py  test_import_export.py  test_llm_client.py  test_llm_parser.py  test_mcp.py  test_merge_phase0.py  test_narrative_generation_policy.py  test_narrative_permission_stop_validator.py  test_narrative_permission_stopping_factorial.py  test_narrative_projection_compiler.py  test_narrative_route.py  test_narrative_route_output_validator.py  test_novel_eval_mcp.py  test_output_contracts.py  test_planner_v2_boundary.py  test_planner_v2_migration.py  test_projects_api.py  test_prompts.py  test_providers.py  test_reviser_patches.py  test_runs_api.py  test_sacrificial_error_channel.py  test_sacrificial_preflight_fusion_v8_experiment.py  test_sacrificial_preflight_fusion_v9_experiment.py  test_strict_limited_planner_writer_factorial.py  test_strict_limited_planner_writer_v1.py  test_structured_transport.py  test_tgbreak_importer.py  (+7 more)
scripts/: dev.ps1  (+7 more)
(+2440 files in other folders)
